--- a/gallery.html
+++ b/gallery.html
@@ -3,23 +3,40 @@
         <meta name="viewport" content="'width=device-width, initial-scale-1">
         <link href="../assets/reset.css" rel="stylesheet"> 
         <link href="../assets/styles.css" rel="stylesheet"> 
+        <link href="../assets/setup.css" rel="stylesheet"> 
         <title> Nature's Inspiration </title>
     </head>
     <body>
         <section class="topbar"> 
+        <div class="homeicon"></div>
         </section>
+
         <section class="gallery-layout">
+        <div class="galleryframe"></div>
         </section>
+
         <section class="colophon"> 
+            <div class="colophon">
+            <p> Colophon text</p>
+            </div>
         </section>
+
         <section class="filters"> 
-        <div class="filter-1"></div>
-        <div class="filter-2"></div>
-        <div class="filter-3"></div>
+            <div class="filter1">
+                <button id="filter">Filter 1!</button> 
+            </div>
+            <div class="filter2">
+                <button id="filter">Filter 2!</button> 
+            </div>
+            <div class="filter2">
+                <button id="filter">Filter 3!</button> 
+            </div>
         </section>
+
         <section class="collection"> 
         <ul>
 
+          <!-- image --> 
             <section class="block">
             <li class="image-block">
                 <img class="cherryblossom.jpg" src="images/cherryblossom.jpg">
@@ -27,11 +44,26 @@
             </section>
 
             <section class="block">
+                <li class="image-block">
+                    <img class="xxx" src="xxx">
+                </li>
+                </section>
+
+                <section class="block">
+                    <li class="image-block">
+                        <img class="xxx" src="xxx">
+                    </li>
+                    </section>
+
+           <!-- Text --> 
+            <section class="block">
             <li class="text-block">
                 <p> Quote from Arena</p>
             </li>
              </section>
 
+            <!-- Youtube --> 
+             Youtube
             <section class="block">
                 <div class="youtube-block">
                     <iframe width="560" height="315" 
