--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
         <meta name="viewport" content="'width=device-width, initial-scale-1">
         <link href="../assets/reset.css" rel="stylesheet"> 
         <link href="../assets/styles.css" rel="stylesheet"> 
+        <link href="../assets/setup.css" rel="stylesheet"> 
+        <script defer src="script.js"></script>
         <title> Nature's Inspiration </title>
     </head>
     <body>
         <h1> Nature's Inspiration</h1>
         <p> Plants, Flowers and Leaves in Art</p>
-        <a href="gallery.html"> Enter the gallery </a>
+		<a href="gallery.html">
+        <button id="enter"> View Gallery</button> </a>
+
+<noscript class="warning">
+	Our site uses JavaScript for some of its functionality, which is disabled in your browser.
+</noscript>
+
+	</body>
+</html>
     </body>
     <footer>
     </footer>
