--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1> Nature's Inspiration</h1>
-        <p> Plants, Flowers and Leaves in Art</p>
+        <p> The Influence of Plants, Flowers and Leaves in Art</p>
 		<a href="gallery.html">
         <button id="enter"> View Gallery</button> </a>
 
