--- a/gallery.html
+++ b/gallery.html
@@ -4,13 +4,18 @@
         <link href="../assets/reset.css" rel="stylesheet"> 
         <link href="../assets/styles.css" rel="stylesheet"> 
         <link href="../assets/setup.css" rel="stylesheet"> 
+        <script defer src="assets/arena.js"></script>
         <title> Nature's Inspiration </title>
     </head>
-    <body>
-        <section class="topbar"> 
-        <div class="homeicon"></div>
-        </section>
+    <header>
 
+        <div class="homeicon"></div>
+        <p> <a id="channel-link"> see on arena </a></p>
+        <section id="channel-description"></section>
+        </section>
+    </header>
+    <main> 
+        <body>
         <section class="gallery-layout">
         <div class="galleryframe"></div>
         </section>
@@ -75,6 +80,7 @@
             
         </ul>
         </section>
+    </main>
     </body>
     <footer>
     </footer>
