--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="utf-8">
         <meta name="viewport" content="'width=device-width, initial-scale-1">
         <link href="../assets/reset.css" rel="stylesheet"> 
         <link href="../assets/styles.css" rel="stylesheet"> 
@@ -8,10 +9,10 @@
         <title> Nature's Inspiration </title>
     </head>
     <header>
-
-        <div class="homeicon"></div>
-        <p> <a id="channel-link"> see on arena </a></p>
-        <section id="channel-description"></section>
+            <h1 id="channel-title"></h1>
+			<p><a id="channel-link">See on Are.na ↗</a></p>
+			<section id="channel-description"></section>
+	</header>
         </section>
     </header>
     <main> 
