--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="utf-8">
         <meta name="viewport" content="'width=device-width, initial-scale-1">
         <link href="../assets/reset.css" rel="stylesheet"> 
         <link href="../assets/styles.css" rel="stylesheet"> 
