--- a/gallery.html
+++ b/gallery.html
@@ -51,13 +51,13 @@
 
             <section class="block">
                 <li class="image-block">
-                    <img class="xxx" src="xxx">
+                    <img class="vincent_van_gogh_almond_blossom.jpg" src="images/vincent_van_gogh_almond_blossom.jpg">
                 </li>
                 </section>
 
                 <section class="block">
                     <li class="image-block">
-                        <img class="xxx" src="xxx">
+                        <img class="artdeco.jpg" src="images/artdeco.jpg">
                     </li>
                     </section>
 
