updated JS and added title and contents

--- a/index.html
+++ b/index.html
@@ -5,19 +5,14 @@
         <link href="../assets/reset.css" rel="stylesheet"> 
         <link href="../assets/styles.css" rel="stylesheet"> 
         <link href="../assets/setup.css" rel="stylesheet"> 
-        <script defer src="script.js"></script>
+        <script defer src="assets/arena.js"></script>
         <title> Nature's Inspiration </title>
     </head>
     <body>
-        <h1> Nature's Inspiration</h1>
+        <h1 id="channel-title"></h1>
         <p> The Influence of Plants, Flowers and Leaves in Art</p>
 		<a href="gallery.html">
         <button id="enter"> View Gallery</button> </a>
-
-<noscript class="warning">
-	Our site uses JavaScript for some of its functionality, which is disabled in your browser.
-</noscript>
-
 	</body>
 </html>
     </body>
