--- a/gallery.html
+++ b/gallery.html
@@ -1,22 +1,23 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="'width=device-width, initial-scale-1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../assets/reset.css" rel="stylesheet"> 
         <link href="../assets/styles.css" rel="stylesheet"> 
         <link href="../assets/setup.css" rel="stylesheet"> 
         <script defer src="assets/arena.js"></script>
         <title> Nature's Inspiration </title>
     </head>
+    <body>
     <header>
             <h1 id="channel-title"></h1>
-			<p><a id="channel-link">See on Are.na ↗</a></p>
 			<section id="channel-description"></section>
+            <div id="channel-count"></div>
+            <p><a id="channel-link">See on Are.na ↗</a></p>
 	</header>
         </section>
     </header>
     <main> 
-        <body>
         <section class="gallery-layout">
         <div class="galleryframe"></div>
         </section>
@@ -40,24 +41,28 @@
         </section>
 
         <section class="collection"> 
-        <ul>
+        <ul id="channel-blocks">
+            <h2> All Blocks</h2>
 
           <!-- image --> 
             <section class="block">
             <li class="image-block">
                 <img class="cherryblossom.jpg" src="images/cherryblossom.jpg">
+                <p class="smalldate"> Created on Feb 5, 2025</p>
             </li>
             </section>
 
             <section class="block">
                 <li class="image-block">
                     <img class="vincent_van_gogh_almond_blossom.jpg" src="images/vincent_van_gogh_almond_blossom.jpg">
+                    <p class="smalldate"> Created on Feb 5, 2025</p>
                 </li>
                 </section>
 
                 <section class="block">
                     <li class="image-block">
                         <img class="artdeco.jpg" src="images/artdeco.jpg">
+                        <p class="smalldate"> Created on Feb 5, 2025</p>
                     </li>
                     </section>
 
@@ -65,6 +70,7 @@
             <section class="block">
             <li class="text-block">
                 <p> Quote from Arena</p>
+                <p class="smalldate"> Created on Feb 5, 2025</p>
             </li>
              </section>
 
@@ -75,6 +81,7 @@
                     <iframe width="560" height="315" 
                         src="https://www.youtube.com/embed/lLWEXRAnQd0" 
                         frameborder="0" allow="autoplay; encrypted-media">
+                        <p class="smalldate"> Created on Feb 5, 2025</p>
                     </iframe>
                 </div>
             </section>
@@ -82,7 +89,9 @@
         </ul>
         </section>
     </main>
-    </body>
     <footer>
+        <h2> your authors</h2>
+        <section id="channel-users"></section>
     </footer>
+</body>
 </html>
