--- a/gallery.html
+++ b/gallery.html
@@ -2,19 +2,28 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
         <link href="../assets/reset.css" rel="stylesheet"> 
         <link href="../assets/styles.css" rel="stylesheet"> 
         <link href="../assets/setup.css" rel="stylesheet"> 
         <script defer src="assets/arena.js"></script>
+
+
         <title> Nature's Inspiration </title>
     </head>
     <body>
     <header>
+        <nav>
+			<section>
+				<a href="https://www.are.na/ziwei-xing/plants-in-art-and-literature-nature-s-inspiration"> Arena </a>
+			</section>
+		</nav>
+    </header>
             <h1 id="channel-title"></h1>
 			<section id="channel-description"></section>
             <div id="channel-count"></div>
             <p><a id="channel-link">See on Are.na ↗</a></p>
-	</header>
         </section>
     </header>
     <main> 
