--- a/index.html
+++ b/index.html
@@ -2,13 +2,23 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="'width=device-width, initial-scale-1">
+
+
         <link href="../assets/reset.css" rel="stylesheet"> 
         <link href="../assets/styles.css" rel="stylesheet"> 
         <link href="../assets/setup.css" rel="stylesheet"> 
         <script defer src="assets/arena.js"></script>
+
+
         <title> Nature's Inspiration </title>
     </head>
     <body>
+        <nav>
+			<section>
+				<a href="https://www.are.na/ziwei-xing/plants-in-art-and-literature-nature-s-inspiration"> Arena </a>
+			</section>
+		</nav>
+
         <h1 id="channel-title"></h1>
         <p> The Influence of Plants, Flowers and Leaves in Art</p>
 		<a href="gallery.html">
