designing index page

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
         <link href="../assets/styles.css" rel="stylesheet"> 
         <link href="../assets/setup.css" rel="stylesheet"> 
         <script defer src="assets/arena.js"></script>
+        <script defer src="assets/script.js"></script>
 
+        <link rel="stylesheet" href="https://use.typekit.net/yrv8zph.css">
+        <link rel="stylesheet" href="https://use.typekit.net/yrv8zph.css">
 
-        <title> Nature's Inspiration </title>
+        <title id="channel-title"> </title>
     </head>
     <body>
         <nav>
@@ -19,10 +22,10 @@
 			</section>
 
 		</nav>
-
-        <h1 id="channel-title"></h1>
+        <h1> <span class="oddity-script">N</span>ature's <span class="oddity-script">I</span>nspiration</h1>
         <p> The Influence of Plants, Flowers and Leaves in Art</p>
-		<a href="gallery.html">
+        <div class="square"> <img id='paintingimages' src="painting1.png"> </div> 
+        <a href="gallery.html">
         <button id="enter"> View Gallery</button> </a>
 	</body>
 </html>
