--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
 		</nav>
         <h1> <span class="oddity-script">N</span>ature's <span class="oddity-script">I</span>nspiration</h1>
         <p> The Influence of Plants, Flowers and Leaves in Art</p>
-        <div class="square"> <img id='paintingimages' src="painting1.png"> </div> 
+        <!-- code below is inspired by a past project i did in the aas program using javascript to create a random iamge generator -->
+       <!--  <div class="circle"> <img id='plateimages' src="plate4.png"> </div>  -->
+        <div class="square"> <img id='paintingimages' src="images/painting1.png"> </div> 
+        <button id="pauseButton">Pause</button>
         <a href="gallery.html">
-        <button id="enter"> View Gallery</button> </a>
+        <p> Explore more artworks and <button id="enter"> Enter the Gallery</button> </a> </p>
 	</body>
 </html>
     </body>
