--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <body>
         <nav>
 			<section>
-				<a href="https://www.are.na/ziwei-xing/plants-in-art-and-literature-nature-s-inspiration"> Arena</a>
+                <a href="gallery.html"> Collection</a>
+                <a href="https://www.are.na/ziwei-xing/plants-in-art-and-literature-nature-s-inspiration"> Arena ↗ </a>
 			</section>
 
 		</nav>
@@ -27,9 +28,6 @@
         <!-- code below is inspired by a past project i did in the aas program using javascript to create a random iamge generator -->
        <!--  <div class="circle"> <img id='plateimages' src="plate4.png"> </div>  -->
         <div class="square"> <img id='paintingimages' src="images/painting1.png"> </div> 
-        <button id="pauseButton">Pause</button>
-        <a href="gallery.html">
-        <p> Explore more artworks and <button id="enter"> Enter the Gallery</button> </a> </p>
 	</body>
 </html>
     </body>
