--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,8 @@
     <header>
         <nav>
 			<section>
-				<a href="https://www.are.na/ziwei-xing/plants-in-art-and-literature-nature-s-inspiration"> Arena </a>
+                <a href="gallery.html"> Collection</a>
+                <a href="https://www.are.na/ziwei-xing/plants-in-art-and-literature-nature-s-inspiration"> Arena ↗ </a>
 			</section>
 		</nav>
     </header>
