--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 </html>
     </body>
     <footer>
+        <p> Curated by Rayana Dilawri and Ziwei</p>
+        <p> Coded by Rayana Dilawri</p>
+        <p> February 2025</p>
+        <p> Typography and Interaction</p>
     </footer>
 </html>
 
