--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <!-- code below is inspired by a past project i did in the aas program using javascript to create a random iamge generator -->
        <!--  <div class="circle"> <img id='plateimages' src="plate4.png"> </div>  -->
         <div class="square"> <img id='paintingimages' src="images/painting1.png"> </div> 
+        <a href="gallery.html"> <button> Explore the Collection</button> </a>
 	</body>
 </html>
     <footer>
