--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         <link href="../assets/styles.css" rel="stylesheet"> 
         <link href="../assets/setup.css" rel="stylesheet"> 
         <script defer src="assets/arena.js"></script>
-        <script defer src="assets/script.js"></script>
 
         <link rel="stylesheet" href="https://use.typekit.net/yrv8zph.css">
         <link rel="stylesheet" href="https://use.typekit.net/yrv8zph.css">
@@ -25,9 +24,7 @@
 		</nav>
         <h1> <span class="oddity-script">N</span>ature's <span class="oddity-script">I</span>nspiration</h1>
         <p> The Influence of Plants, Flowers and Leaves in Art</p>
-        <!-- code below is inspired by a past project i did in the aas program using javascript to create a random iamge generator -->
-       <!--  <div class="circle"> <img id='plateimages' src="plate4.png"> </div>  -->
-        <div class="square"> <img id='paintingimages' src="images/painting1.png"> </div> 
+        <section id="channel-description"></section>
         <a href="gallery.html"> <button> Explore the Collection</button> </a>
 	</body>
 </html>
