--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link href="../assets/styles.css" rel="stylesheet"> 
         <link href="../assets/setup.css" rel="stylesheet"> 
         <script defer src="assets/arena.js"></script>
+        <script defer src="assets/main.js"></script>
 
         <link rel="stylesheet" href="https://use.typekit.net/yrv8zph.css">
         <link rel="stylesheet" href="https://use.typekit.net/yrv8zph.css">
