creating horizontal scroll first page

--- a/gallery.html
+++ b/gallery.html
@@ -18,9 +18,10 @@
     <body>
     <header>
         <nav>
-			<section>
+			<section class="nav-links">
+                <a href="index.html"> home</a>
                 <a href="gallery.html"> Collection</a>
-                <a href="https://www.are.na/ziwei-xing/plants-in-art-and-literature-nature-s-inspiration"> Arena ↗ </a>
+               <a href="https://www.are.na/ziwei-xing/plants-in-art-and-literature-nature-s-inspiration"> Arena ↗ </a>
 			</section>
 		</nav>
     </header>
@@ -34,6 +35,9 @@
         <h2> all blocks </h2>
         <ul> 
             <button id="show-links-button"> Show Links </button>
+            <button id="show-video-button"> Show Video </button>
+            <button id="show-video-button"> Show Photo </button>
+            <button id="show-video-button"> Show Audio </button>
             <button id="show-all-button"> Show All </button>
         </ul>
         <ul id="channel-blocks"> </ul>
