--- a/index.html
+++ b/index.html
@@ -17,15 +17,30 @@
     </head>
     <body>
         <nav>
-			<section>
+			<section class="nav-links">
+                <a href="index.html"> home</a>
                 <a href="gallery.html"> Collection</a>
-                <a href="https://www.are.na/ziwei-xing/plants-in-art-and-literature-nature-s-inspiration"> Arena ↗ </a>
+               <a href="https://www.are.na/ziwei-xing/plants-in-art-and-literature-nature-s-inspiration"> Arena ↗ </a>
 			</section>
-
 		</nav>
         <h1> <span class="oddity-script">N</span>ature's <span class="oddity-script">I</span>nspiration</h1>
         <p> The Influence of Plants, Flowers and Leaves in Art</p>
         <section id="channel-description"></section>
+        <section class="image-scroll-container">
+            <img src="images/painting1.png"> 
+            <img src="images/painting2.png">
+            <img src="images/painting3.png">
+            <img src="images/painting4.png">
+            <img src="images/painting5.png">
+            <img src="images/painting6.png">
+            <img src="images/painting7.png">
+            <img src="images/painting8.png">
+            <img src="images/painting9.png">
+            <img src="images/painting10.png">
+            <img src="images/painting11.png">
+           
+          </section>
+          
         <a href="gallery.html"> <button> Explore the Collection</button> </a>
 	</body>
 </html>
