show vide button

--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
             <button id="show-links-button"> Show Links </button>
             <button id="show-video-button"> Show Video </button>
             <button id="show-video-button"> Show Photo </button>
-            <button id="show-video-button"> Show Audio </button>
+            <button id="show-audio-button"> Show Audio </button>
             <button id="show-all-button"> Show All </button>
         </ul>
         <ul id="channel-blocks"> </ul>
