--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</nav>
         <h1> <span class="oddity-script">N</span>ature's <span class="oddity-script">I</span>nspiration</h1>
         <p> The Influence of Plants, Flowers and Leaves in Art</p>
-        <section id="channel-description"></section>
+        <h2> Preview of the Collection</h2>
         <section class="image-scroll-container">
             <img src="images/painting1.png"> 
             <img src="images/painting2.png">
