adding modal - eric loom

--- a/gallery.html
+++ b/gallery.html
@@ -18,11 +18,9 @@
     <body>
     <header>
         <nav>
-			<section class="nav-links">
                 <a href="index.html"> home</a>
                 <a href="gallery.html"> Collection</a>
                <a href="https://www.are.na/ziwei-xing/plants-in-art-and-literature-nature-s-inspiration"> Arena ↗ </a>
-			</section>
 		</nav>
     </header>
             <h1 id="channel-title"></h1>
@@ -31,6 +29,10 @@
         </section>
     </header>
     <main> 
+        <dialog id="diaglog">
+            <p> I am a modal overlay!</p>
+            <button class="close"> Close</button>
+        </dialog>
         <section>
         <h2> all blocks </h2>
         <ul> 
