added modal - not working but trying to figure it out

--- a/gallery.html
+++ b/gallery.html
@@ -29,9 +29,8 @@
         </section>
     </header>
     <main> 
-        <dialog id="diaglog">
-            <p> I am a modal overlay!</p>
-            <button class="close"> Close</button>
+        <dialog>
+            
         </dialog>
         <section>
         <h2> all blocks </h2>
