--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,8 @@
     </header>
     <main> 
         <dialog>
-            
+            <p> I am a modal overlay!</p>
+            <button class="close"> Close</button>
         </dialog>
         <section>
         <h2> all blocks </h2>
