--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="'width=device-width, initial-scale-1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="stylesheet" href="https://use.typekit.net/yrv8zph.css">
 
 
         <link href="../assets/reset.css" rel="stylesheet"> 
@@ -10,19 +12,17 @@
         <script defer src="assets/arena.js"></script>
         <script defer src="assets/main.js"></script>
 
-        <link rel="stylesheet" href="https://use.typekit.net/yrv8zph.css">
-        <link rel="stylesheet" href="https://use.typekit.net/yrv8zph.css">
 
-        <title id="channel-title"> </title>
+        <title> Nature's Inspiration </title>
     </head>
     <body>
+    <header>
         <nav>
-			<section class="nav-links">
                 <a href="index.html"> home</a>
                 <a href="gallery.html"> Collection</a>
                <a href="https://www.are.na/ziwei-xing/plants-in-art-and-literature-nature-s-inspiration"> Arena ↗ </a>
-			</section>
 		</nav>
+    </header>
         <h1> <span class="oddity-script">N</span>ature's <span class="oddity-script">I</span>nspiration</h1>
         <p> The Influence of Plants, Flowers and Leaves in Art</p>
         <h2> Preview of the Collection</h2>
