adding color and modal

--- a/gallery.html
+++ b/gallery.html
@@ -38,8 +38,9 @@
         <ul> 
             <button id="show-links-button"> Show Links </button>
             <button id="show-video-button"> Show Video </button>
-            <button id="show-image-button"> Show Photo </button>
+            <button id="show-image-button"> Show Image </button>
             <button id="show-audio-button"> Show Audio </button>
+            <button id="show-text-button"> Show Text </button>
             <button id="show-all-button"> Show All </button>
         </ul>
         <ul id="channel-blocks"> </ul>
