new format - adding sections and colors

--- a/gallery.html
+++ b/gallery.html
@@ -23,30 +23,32 @@
                 <p><a id="channel-link">See on Are.na ↗</a></p>	
             	</nav>
     </header>
-            <h1 id="channel-title"></h1>
-           
-            <section id="channel-description"></section>
-        </section>
-    </header>
     <main> 
+        <section class="top"> 
+            <h1 id="channel-title"></h1>
+            <section id="channel-description"></section>
         <dialog>
             <p> I am a modal overlay!</p>
             <button class="close"> Close</button>
         </dialog>
-        <section>
-        <h2> all blocks </h2>
-        <ul> 
-            <button id="show-links-button"> Show Links </button>
-            <button id="show-video-button"> Show Video </button>
-            <button id="show-image-button"> Show Image </button>
-            <button id="show-audio-button"> Show Audio </button>
-            <button id="show-text-button"> Show Text </button>
-            <button id="show-all-button"> Show All </button>
-        </ul>
+        </section>
+        <section class="middle"> 
+            Claude Monet
+            Water Lilies
+            1914-26 </section>
+        <section class="bottom">
+            <p> explore the water lilies</p>
+            <ul> 
+                <button id="show-links-button"> Show Links </button>
+                <button id="show-video-button"> Show Video </button>
+                <button id="show-image-button"> Show Image </button>
+                <button id="show-audio-button"> Show Audio </button>
+                <button id="show-text-button"> Show Text </button>
+                <button id="show-all-button"> Show All </button>
+            </ul>
         <ul id="channel-blocks"> </ul>
         <p id="channel-count"></div> <span> blocks</span>
         </section>
-        
     </main>
     <footer>
         <footer>
