changing background image

--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,8 @@
             Water Lilies
             1914-26 </section>
         <section class="bottom">
-            <p> explore the water lilies</p>
+            <p> explore the  <p id="channel-count">  </p> water lilies</p>
+        
             <ul> 
                 <button id="show-links-button"> Show Links </button>
                 <button id="show-video-button"> Show Video </button>
@@ -47,7 +48,6 @@
                 <button id="show-all-button"> Show All </button>
             </ul>
         <ul id="channel-blocks"> </ul>
-        <p id="channel-count"></div> <span> blocks</span>
         </section>
     </main>
     <footer>
