--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
                <a href="https://www.are.na/ziwei-xing/plants-in-art-and-literature-nature-s-inspiration"> Arena ↗ </a>
 		</nav>
     </header>
+    <section class="full">
         <h1> <span class="oddity-script">N</span>ature's <span class="oddity-script">I</span>nspiration</h1>
         <p> The Influence of Plants, Flowers and Leaves in Art</p>
+        <p> colophon</p>
         <h2> Preview of the Collection</h2>
         <section class="image-scroll-container">
             <img src="images/painting1.png"> 
@@ -42,6 +44,7 @@
           </section>
           
         <a href="gallery.html"> <button> Explore the Collection</button> </a>
+    </section>
 	</body>
 </html>
     <footer>
