tried a lot of things. still working
worked with viyan code tutor: tried implementing JS for random positioning. but didnt work. just added animation and green overlay. also added fonts

--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="https://use.typekit.net/yrv8zph.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap" rel="stylesheet">
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 
         <link href="../assets/reset.css" rel="stylesheet"> 
         <link href="../assets/styles.css" rel="stylesheet"> 
@@ -18,15 +28,16 @@
     <body>
     <header>
         <nav>
-                <a href="index.html"> home</a>
-                <a href="gallery.html"> Collection</a>
-                <p><a id="channel-link">See on Are.na ↗</a></p>	
-            	</nav>
+                <p class="nav"> <a href="index.html"> Home</a></p>
+                <p class="nav">  <a href="gallery.html"> Collection</a> </p>
+                <p class="nav"><a id="channel-link">See on Are.na ↗</a></p>	
+        </nav>
     </header>
     <main> 
         <section class="top"> 
-            <h1 id="channel-title"></h1>
-            <section id="channel-description"></section>
+            <h1> The Green Muse</h1>
+            <h2> <class id="channel-title"> </class></h2>
+           <p> <class id="channel-description"></class> </p>
         <dialog>
             <p> I am a modal overlay!</p>
             <button class="close"> Close</button>
