update to do list and styling

--- a/gallery.html
+++ b/gallery.html
@@ -48,7 +48,7 @@
             Water Lilies
             1914-26 </section>
         <section class="bottom">
-            <p> explore the  <p id="channel-count">  </p> water lilies</p>
+            <p class="count"> explore the  <class id="channel-count"></class> water lilies</p>
            
             <ul> 
                 <button id="show-all-button"> Show All </button>
