adding button styles and cursor

--- a/gallery.html
+++ b/gallery.html
@@ -44,18 +44,17 @@
         </dialog>
         </section>
         <section class="middle"> 
-            Claude Monet
+            <p class="monet-cred"> Claude Monet
             Water Lilies
-            1914-26 </section>
+            1914-26  </p> </section>
         <section class="bottom">
-            <p class="count"> explore the  <class id="channel-count"></class> water lilies</p>
-           
+            <p class="count"> explore the <class id="channel-count"></class> water lilies</p>
             <ul> 
                 <button id="show-all-button"> Show All </button>
                 <button id="show-links-button"> Show Links </button>
                 <button id="show-video-button"> Show Video </button>
                 <button id="show-image-button"> Show Image </button>
-                <button id="show-text-button"> Show Text </button>
+                <button  id="show-text-button"> Show Text </button>
             </ul>
         <ul id="channel-blocks"> </ul>
         </section>
