mobile vs desktop nav

--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,7 @@
     </head>
     <body>
     <header>
-        <nav>
+        <nav> 
                 <p class="nav"> <a href="index.html"> Home</a></p>
                 <p class="nav">  <a href="gallery.html"> Collection</a> </p>
                 <p class="nav"><a id="channel-link">See on Are.na ↗</a></p>	
@@ -49,13 +49,13 @@
             1914-26  </p> </section>
         <section class="bottom">
             <p class="count"> explore the <class id="channel-count"></class> water lilies</p>
-            <ul> 
+            <div class="filter-line"> 
                 <button id="show-all-button"> Show All </button>
                 <button id="show-links-button"> Show Links </button>
                 <button id="show-video-button"> Show Video </button>
                 <button id="show-image-button"> Show Image </button>
                 <button  id="show-text-button"> Show Text </button>
-            </ul>
+            </div>
         <ul id="channel-blocks"> </ul>
         </section>
     </main>
