fixing root sizes

--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
         <section class="top"> 
             <h1> The Green Muse</h1>
             <h2> <class id="channel-title"> </class></h2>
-           <p> <class id="channel-description"></class> </p>
+           <p class="description-text"> <class id="channel-description"></class> </p>
         <dialog>
             <p> I am a modal overlay!</p>
             <button class="close"> Close</button>
