colors and styling

--- a/gallery.html
+++ b/gallery.html
@@ -28,9 +28,9 @@
     <body>
     <header>
         <nav> 
-                <p class="nav"> <a href="index.html"> Home</a></p>
-                <p class="nav">  <a href="gallery.html"> Collection</a> </p>
-                <p class="nav"><a id="channel-link">See on Are.na ↗</a></p>	
+                <p class="nav-text"> <a href="index.html"> Home</a></p>
+                <p class="nav-text">  <a href="gallery.html"> Collection</a> </p>
+                <p class="nav-text"><a id="channel-link">See on Are.na ↗</a></p>	
         </nav>
     </header>
     <main> 
@@ -48,24 +48,28 @@
             Water Lilies
             1914-26  </p> </section>
         <section class="bottom">
-            <p class="count"> explore the <class id="channel-count"></class> water lilies</p>
-            <div class="filter-line"> 
+            <section class="filter-line"> 
                 <button id="show-all-button"> Show All </button>
                 <button id="show-links-button"> Show Links </button>
                 <button id="show-video-button"> Show Video </button>
                 <button id="show-image-button"> Show Image </button>
                 <button  id="show-text-button"> Show Text </button>
-            </div>
+            </section>
+            <p class="count"> explore the <class id="channel-count"></class> water lilies</p>
+
         <ul id="channel-blocks"> </ul>
         </section>
     </main>
-    <footer>
-        <footer>
-            <p> Curated by Rayana Dilawri and Ziwei</p>
-            <p> Coded by Rayana Dilawri</p>
-            <section id="channel-users"></section>  
-            <p> February 2025</p>
-            <p> Typography and Interaction</p>
-    </footer>
+ <footer>
+    <div class="footer-left">
+        <p class="footer">Curated by Rayana Dilawri and Ziwei</p>
+        <p class="footer">Typography and Interaction</p>
+    </div>
+    <div class="footer-right">
+        <p class="footer">Designed by Rayana Dilawri</p>
+        <p class="footer">February 2025</p>
+    </div>
+</footer>
+
 </body>
 </html>
