--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <body>
     <header>
        
-            <nav>
-                    <p class="nav"> <a href="index.html"> Home</a></p>
-                    <p class="nav">  <a href="gallery.html"> Collection</a> </p>
-                    <p class="nav"><a id="channel-link">See on Are.na ↗</a></p>	
-            </nav>
+        <nav> 
+            <p class="nav-text"> <a href="index.html"> Home</a></p>
+            <p class="nav-text">  <a href="gallery.html"> Collection</a> </p>
+            <p class="nav-text"><a id="channel-link">See on Are.na ↗</a></p>	
+    </nav>
     
     </header>
     <section class="full">
@@ -60,13 +60,16 @@
         <a href="gallery.html"> <button> Explore the Collection</button> </a>
     </section>
 	</body>
-</html>
-    <footer>
-        <p> Curated by Rayana Dilawri and Ziwei</p>
-        <p> Coded by Rayana Dilawri</p>
-        <p> February 2025</p>
-        <p> Typography and Interaction</p>
-    </footer>
+<footer>
+    <div class="footer-left">
+        <p class="footer">Curated by Rayana Dilawri and Ziwei</p>
+        <p class="footer">Typography and Interaction</p>
+    </div>
+    <div class="footer-right">
+        <p class="footer">Designed by Rayana Dilawri</p>
+        <p class="footer">February 2025</p>
+    </div>
+</footer>
 </html>
 
 
