figuring out my options for random placement

--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
     </header>
     <section class="full">
         <h1>The Green Muse</h1>
-        <p> The Influence of Plants, Flowers and Leaves in Art</p>
-        <p> colophon</p>
-        <h2> Preview of the Collection</h2>
+        <H2> The Influence of Plants, Flowers and Leaves in Art</H2>
+        <h3> Preview of the Collection</h3>
         <section class="image-scroll-container">
             <img src="images/painting1.png"> 
             <img src="images/painting2.png">
@@ -57,7 +56,7 @@
            
           </section>
           
-        <a href="gallery.html"> <button> Explore the Collection</button> </a>
+        <a href="gallery.html"> <button id="index-button"> Explore the Collection </button> </a>
     </section>
 	</body>
 <footer>
