--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 
+        <link rel="icon" type="image/png" href="/images/favicon.png">
+
         <link href="../assets/reset.css" rel="stylesheet"> 
         <link href="../assets/styles.css" rel="stylesheet"> 
         <link href="../assets/setup.css" rel="stylesheet"> 
