YAYYY got the animation working again
originally, either the key frames animation of my javascript function would work because they are both using the code to transform/translate, but after research i found out i can use key frames with margin top

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <title> Nature's Inspiration </title>
     </head>
     <body>
+        <section class="middle"> 
     <header>
        
         <nav> 
@@ -60,6 +61,7 @@
           
         <a href="gallery.html"> <button id="index-button"> Explore the Collection </button> </a>
     </section>
+    </section>  
 	</body>
 <footer>
     <div class="footer-left">
