omg saving because i thought i just lost everything - STRESS

--- a/gallery.html
+++ b/gallery.html
@@ -57,7 +57,7 @@
                 <button id="show-image-button"> Show Image </button>
                 <button  id="show-text-button"> Show Text </button>
             </section>
-            <p class="count"> Explore the <class id="channel-count"></class> Water Lilies</p>
+            <p class="count"> Explore the <class id="channel-count"></class> water lilies</p>
 
         <ul id="channel-blocks"> </ul>
         </section>
