--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
             <img src="images/painting10.png">
             <img src="images/painting11.png">
            
+            <!-- i found the unicodes to the buttons here:https://www.w3schools.com/charsets/ref_utf_arrows.asp
+             these codes function as symbols  when you enter them in between the button tags, as if you were entering text 
+             this was relatable to my design as I wanted to indicate to the viewer that you need to swipe left or right to preview the horizontal slide--> 
             <button class="arrow left-arrow">&#8594;</button>
 
           </section>
