--- a/gallery.html
+++ b/gallery.html
@@ -16,9 +16,9 @@
     <link rel="icon" type="image/png" href="/images/favicon.png">
 
     <!-- Styles -->
-    <link href="../assets/reset.css" rel="stylesheet"> 
-    <link href="../assets/styles.css" rel="stylesheet"> 
-    <link href="../assets/setup.css" rel="stylesheet"> 
+    <link href="assets/reset.css" rel="stylesheet"> 
+    <link href="assets/styles.css" rel="stylesheet">
+     <link href="assets/setup.css" rel="stylesheet"> 
 
     <!-- Scripts -->
     <script defer src="assets/arena.js"></script>
