fixing live site

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html> 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -66,7 +66,7 @@
             <p class="quote">"The richness I achieve comes from nature, the source of my inspiration" – Monet</p>
         </section>
     </section>
-
+</body>
     <footer>
         <div class="footer-left">
             <p class="footer">Curated by Rayana Dilawri and Ziwei</p>
@@ -77,6 +77,6 @@
             <p class="footer">February 2025</p>
         </div>
     </footer>
-</body>
+
 </html>
 
