--- a/assets/gallery.html
+++ b/assets/gallery.html
@@ -16,13 +16,13 @@
     <link rel="icon" type="image/png" href="/images/favicon.png">
 
     <!-- Styles -->
-    <link href="assets/reset.css" rel="stylesheet"> 
-    <link href="assets/styles.css" rel="stylesheet">
-     <link href="assets/setup.css" rel="stylesheet"> 
+    <link href="reset.css" rel="stylesheet"> 
+    <link href="styles.css" rel="stylesheet">
+     <link href="setup.css" rel="stylesheet"> 
 
     <!-- Scripts -->
-    <script defer src="assets/arena.js"></script>
-    <script defer src="assets/main.js"></script>
+    <script defer src="arena.js"></script>
+    <script defer src="main.js"></script>
 
     <title>Nature's Inspiration</title>
 </head>
