updating live link

--- a/gallery.html
+++ b/gallery.html
@@ -15,14 +15,14 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/images/favicon.png">
 
-    <!-- Styles -->
-    <link href="reset.css" rel="stylesheet"> 
-    <link href="styles.css" rel="stylesheet">
-     <link href="setup.css" rel="stylesheet"> 
+  <!-- Styles -->
+<link href="assets/reset.css" rel="stylesheet"> 
+<link href="assets/setup.css" rel="stylesheet">
+<link href="assets/styles.css" rel="stylesheet"> 
 
-    <!-- Scripts -->
-    <script defer src="arena.js"></script>
-    <script defer src="main.js"></script>
+<!-- Scripts -->
+<script defer src="assets/arena.js"></script>
+<script defer src="assets/main.js"></script>
 
     <title>Nature's Inspiration</title>
 </head>
