adding feedback annotations / what i changed

--- a/gallery.html
+++ b/gallery.html
@@ -79,3 +79,11 @@
 
 </body>
 </html>
+
+
+<!-- 
+recap of what i changed for the second submission:
+feedback: Live site doesn’t work (missing/incorrect references to assets) 
+what i did: checked my work and made sure there were no unnessecary ../ before my assets.
+
+-->
