--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"> 
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,46 +9,78 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/images/favicon.png">
 
   <!-- Styles -->
-  <link href="assets/reset.css" rel="stylesheet"> 
-  <link href="assets/setup.css" rel="stylesheet">
-  <link href="assets/styles.css" rel="stylesheet"> 
-  
-  <!-- Scripts -->
-  <script defer src="assets/arena.js"></script>
-  <script defer src="assets/main.js"></script>
-  
+<link href="assets/reset.css" rel="stylesheet"> 
+<link href="assets/setup.css" rel="stylesheet">
+<link href="assets/styles.css" rel="stylesheet"> 
+
+<!-- Scripts -->
+<script defer src="assets/arena.js"></script>
+<script defer src="assets/main.js"></script>
 
     <title>Nature's Inspiration</title>
 </head>
-
 <body>
+
     <header>
-        <nav> 
-            <p class="nav-text"><a href="index.html">Home</a></p>
-            <p class="nav-text"><a href="gallery.html">Collection</a></p>
-            <p class="nav-text"><a id="channel-link">See on Are.na ↗</a></p>	
-        </nav>
+     
+          <p class="nav-text"><a id="channel-link">See on Are.na ↗</a></p>	
+      
     </header>
 
-    <section class="full">
-        <h1>The Green Muse</h1>
-        <h2>The Influence of Plants, Flowers and Leaves in Art</h2>
-        <h3>Preview of the Collection</h3>
+    <main> 
+        <section class="top"> 
+            <h1>The Green Muse</h1>
+            <h2><span id="channel-title"></span></h2>
+            <p class="description-text"><span id="channel-description"></span></p>
 
-
-
-        <section class="quote">
-            <p class="quote">"The richness I achieve comes from nature, the source of my inspiration" – Monet</p>
+            <dialog>
+                <p>I am a modal overlay!</p>
+                <button class="close">Close</button>
+            </dialog>
         </section>
-    </section>
-</body>
 
+
+        <section class="bottom">
+            <section class="filter-line"> 
+                <button id="show-all-button">Show All</button>
+                <button id="show-links-button">Show Links</button>
+                <button id="show-video-button">Show Video</button>
+                <button id="show-image-button">Show Image</button>
+                <button id="show-text-button">Show Text</button>
+            </section>
+
+            <p class="count">
+                Explore the <span id="channel-count"></span> water lilies
+            </p>
+
+            <ul id="channel-blocks"></ul>
+        </section>
+    </main>
+
+    <footer>
+        <div class="footer-left">
+            <p class="footer">Curated by Rayana Dilawri and Ziwei</p>
+            <p class="footer">Typography and Interaction</p>
+        </div>
+        <div class="footer-right">
+            <p class="footer">Designed by Rayana Dilawri</p>
+            <p class="footer">February 2025</p>
+        </div>
+    </footer>
+
+</body>
 </html>
 
+
+<!-- 
+recap of what i changed for the second submission:
+feedback: Live site doesn’t work (missing/incorrect references to assets) 
+what i did: checked my work and made sure there were no unnessecary ../ before my assets.
+
+-->
