--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
 <!-- 
 recap of what i changed for the second submission:
 feedback: Live site doesn’t work (missing/incorrect references to assets) 
-what i did: checked my work and made sure there were no unnessecary ../ before my assets.
+what i did: checked my work and made sure there were no unnessecary ../ before my assets (line 17-20)
 
 -->
